tests/ui/variable_bits/inferred_missing_bits.stderr
error: enums with data variants must specify #[bits = N] or #[bits = (sizes...)]
  --> tests/ui/variable_bits/inferred_missing_bits.rs:5:1
   |
5  | / enum TestData {
6  | |     #[discriminant = 0]
7  | |     Small(u8),
8  | |     #[discriminant = 1]
9  | |     Medium(u16),
10 | | }
   | |_^
